--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "member_yosvu_group",
   "version": "1.0.0",
   "description": "member_yosvu_group",
+  "main":"index.js",
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
